Deep backend optimization: disable OSIV, Tomcat thread tuning, case-insensitive search, clean mapper, dead code removal